# library

./: .gitignore  README.md  pyproject.toml
backend/apps/: authentication.py
backend/apps/users/: admin.py  models.py  service.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_user_email.py
backend/common/: enums.py
backend/interfaces/api/: urls.py
backend/interfaces/api/serializers/: library.py
backend/interfaces/api/views/: library.py
backend/interfaces/front/forms/: users.py
backend/interfaces/front/templates/users/: base.html  login.html  registration.html
backend/interfaces/front/templates/website/: main.html
backend/interfaces/front/urls/: __init__.py  users.py  website.py
backend/interfaces/front/views/: users.py  website.py
backend/project/: settings.py  urls.py
